--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==1.0.2
 flask-mongoengine==0.9.5
 flask-restplus==0.12.1
 Flask-Script==2.0.6
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10
 jsonschema==3.0.1
